src/main/language/antlr/MiniParser.java
// Generated from MiniParser.g4 by ANTLR 4.5

    package language.antlr;

    import org.antlr.v4.runtime.*;
    import java.io.*;
    import java.util.*;

    import language.model.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiniParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NOT=1, EQ=2, NEQ=3, LEQ=4, GEQ=5, DBLEQ=6, COMMA=7, SEMI=8, LPAREN=9, 
		RPAREN=10, LCURLY=11, RCURLY=12, LBRACK=13, RBRACK=14, RANGLE=15, LANGLE=16, 
		AND=17, OR=18, INCR=19, DECR=20, INTEGER=21, DECIMAL=22, CHARACTER=23, 
		ARRAYLIST=24, LINKEDLIST=25, POINTER=26, STRING=27, ANY=28, IF=29, RETURN=30, 
		TYPEDEF=31, FRAME=32, ADD=33, SUB=34, MULT=35, DIV=36, MOD=37, DOT=38, 
		QMARK=39, COLON=40, SYSTEM=41, INT_LIT=42, STR_LIT=43, ID=44, WS=45, BLOCK_COMMENT=46, 
		LINE_COMMENT=47;
	public static final int
		RULE_program = 0, RULE_programList = 1, RULE_programStmt = 2, RULE_typedef = 3, 
		RULE_fnDecl = 4, RULE_actualList = 5, RULE_varDeclList = 6, RULE_varDecl = 7, 
		RULE_varInitStmt = 8, RULE_type = 9, RULE_genericType = 10, RULE_frameType = 11, 
		RULE_frameDecl = 12, RULE_primitiveType = 13, RULE_primitiveGenericType = 14, 
		RULE_stmtList = 15, RULE_stmt = 16, RULE_assignStmt = 17, RULE_expr = 18;
	public static final String[] ruleNames = {
		"program", "programList", "programStmt", "typedef", "fnDecl", "actualList", 
		"varDeclList", "varDecl", "varInitStmt", "type", "genericType", "frameType", 
		"frameDecl", "primitiveType", "primitiveGenericType", "stmtList", "stmt", 
		"assignStmt", "expr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'!'", "'='", "'!='", "'<='", "'>='", "'=='", "','", "';'", "'('", 
		"')'", "'{'", "'}'", "'['", "']'", "'>'", "'<'", "'&&'", "'||'", "'++'", 
		"'--'", "'Integer'", "'Decimal'", "'Character'", "'ArrayList'", "'LinkedList'", 
		"'Pointer'", "'String'", "'Any'", "'if'", "'return'", "'typedef'", "'frame'", 
		"'+'", "'-'", "'*'", "'/'", "'%'", "'.'", "'?'", "':'", "'System.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NOT", "EQ", "NEQ", "LEQ", "GEQ", "DBLEQ", "COMMA", "SEMI", "LPAREN", 
		"RPAREN", "LCURLY", "RCURLY", "LBRACK", "RBRACK", "RANGLE", "LANGLE", 
		"AND", "OR", "INCR", "DECR", "INTEGER", "DECIMAL", "CHARACTER", "ARRAYLIST", 
		"LINKEDLIST", "POINTER", "STRING", "ANY", "IF", "RETURN", "TYPEDEF", "FRAME", 
		"ADD", "SUB", "MULT", "DIV", "MOD", "DOT", "QMARK", "COLON", "SYSTEM", 
		"INT_LIT", "STR_LIT", "ID", "WS", "BLOCK_COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiniParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	public MiniParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Program p;
		public ProgramListContext pl;
		public TerminalNode EOF() { return getToken(MiniParser.EOF, 0); }
		public ProgramListContext programList() {
			return getRuleContext(ProgramListContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			((ProgramContext)_localctx).pl = programList(0);
			setState(39);
			match(EOF);

			        ((ProgramContext)_localctx).p =  new Program(((ProgramContext)_localctx).pl.l);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramListContext extends ParserRuleContext {
		public ArrayList<ProgramStatement> l;
		public ProgramListContext pl;
		public ProgramStmtContext ps;
		public ProgramListContext programList() {
			return getRuleContext(ProgramListContext.class,0);
		}
		public ProgramStmtContext programStmt() {
			return getRuleContext(ProgramStmtContext.class,0);
		}
		public ProgramListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programList; }
	}

	public final ProgramListContext programList() throws RecognitionException {
		return programList(0);
	}

	private ProgramListContext programList(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ProgramListContext _localctx = new ProgramListContext(_ctx, _parentState);
		ProgramListContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_programList, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{

			        ((ProgramListContext)_localctx).l =  new ArrayList<>();
			    
			}
			_ctx.stop = _input.LT(-1);
			setState(51);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ProgramListContext(_parentctx, _parentState);
					_localctx.pl = _prevctx;
					_localctx.pl = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_programList);
					setState(45);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(46);
					((ProgramListContext)_localctx).ps = programStmt();

					                  ((ProgramListContext)_localctx).pl.l.add(((ProgramListContext)_localctx).ps.p);
					                  ((ProgramListContext)_localctx).l =  ((ProgramListContext)_localctx).pl.l;
					              
					}
					} 
				}
				setState(53);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ProgramStmtContext extends ParserRuleContext {
		public ProgramStatement p;
		public FnDeclContext fn;
		public TypedefContext t;
		public FrameDeclContext fd;
		public VarDeclContext vd;
		public VarInitStmtContext vi;
		public FnDeclContext fnDecl() {
			return getRuleContext(FnDeclContext.class,0);
		}
		public TypedefContext typedef() {
			return getRuleContext(TypedefContext.class,0);
		}
		public FrameDeclContext frameDecl() {
			return getRuleContext(FrameDeclContext.class,0);
		}
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public VarInitStmtContext varInitStmt() {
			return getRuleContext(VarInitStmtContext.class,0);
		}
		public ProgramStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programStmt; }
	}

	public final ProgramStmtContext programStmt() throws RecognitionException {
		ProgramStmtContext _localctx = new ProgramStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_programStmt);
		try {
			setState(72);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				((ProgramStmtContext)_localctx).fn = fnDecl();

				        ((ProgramStmtContext)_localctx).p =  ((ProgramStmtContext)_localctx).fn.f;
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				((ProgramStmtContext)_localctx).t = typedef();
				setState(58);
				match(SEMI);


				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(61);
				((ProgramStmtContext)_localctx).fd = frameDecl();
				setState(62);
				match(SEMI);


				    
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(65);
				((ProgramStmtContext)_localctx).vd = varDecl();
				setState(66);
				match(SEMI);


				    
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(69);
				((ProgramStmtContext)_localctx).vi = varInitStmt();


				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedefContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(MiniParser.ID, 0); }
		public FrameDeclContext frameDecl() {
			return getRuleContext(FrameDeclContext.class,0);
		}
		public TypedefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedef; }
	}

	public final TypedefContext typedef() throws RecognitionException {
		TypedefContext _localctx = new TypedefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typedef);
		try {
			setState(82);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				match(TYPEDEF);
				setState(75);
				type(0);
				setState(76);
				match(ID);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				match(TYPEDEF);
				setState(79);
				frameDecl();
				setState(80);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FnDeclContext extends ParserRuleContext {
		public FunctionDeclaration f;
		public VarDeclContext v;
		public VarDeclListContext l;
		public StmtListContext s;
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public VarDeclListContext varDeclList() {
			return getRuleContext(VarDeclListContext.class,0);
		}
		public StmtListContext stmtList() {
			return getRuleContext(StmtListContext.class,0);
		}
		public FnDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fnDecl; }
	}

	public final FnDeclContext fnDecl() throws RecognitionException {
		FnDeclContext _localctx = new FnDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fnDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			((FnDeclContext)_localctx).v = varDecl();
			setState(85);
			match(LPAREN);
			setState(86);
			((FnDeclContext)_localctx).l = varDeclList();
			setState(87);
			match(RPAREN);
			setState(88);
			match(LCURLY);
			setState(89);
			((FnDeclContext)_localctx).s = stmtList(0);
			setState(90);
			match(RCURLY);

			        ((FnDeclContext)_localctx).f =  new FunctionDeclaration(((FnDeclContext)_localctx).v.v.getType(), ((FnDeclContext)_localctx).v.v.getId(), ((FnDeclContext)_localctx).l.l, ((FnDeclContext)_localctx).s.s);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActualListContext extends ParserRuleContext {
		public ArrayList<Expression> l;
		public ActualListContext a;
		public ExprContext e;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ActualListContext actualList() {
			return getRuleContext(ActualListContext.class,0);
		}
		public ActualListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actualList; }
	}

	public final ActualListContext actualList() throws RecognitionException {
		return actualList(0);
	}

	private ActualListContext actualList(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ActualListContext _localctx = new ActualListContext(_ctx, _parentState);
		ActualListContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_actualList, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(94);
				((ActualListContext)_localctx).e = expr(0);

				        ((ActualListContext)_localctx).l =  new ArrayList<>();
				        _localctx.l.add(((ActualListContext)_localctx).e.e);
				    
				}
				break;
			case 2:
				{
				 /* nothing */
				        ((ActualListContext)_localctx).l =  new ArrayList<>();
				    
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(107);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ActualListContext(_parentctx, _parentState);
					_localctx.a = _prevctx;
					_localctx.a = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_actualList);
					setState(100);
					if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
					setState(101);
					match(COMMA);
					setState(102);
					((ActualListContext)_localctx).e = expr(0);

					                  ((ActualListContext)_localctx).a.l.add(((ActualListContext)_localctx).e.e);
					              
					}
					} 
				}
				setState(109);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class VarDeclListContext extends ParserRuleContext {
		public ArrayList<VariableDeclaration> l;
		public VarDeclContext v1;
		public VarDeclListContext vl;
		public VarDeclContext v2;
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public VarDeclListContext varDeclList() {
			return getRuleContext(VarDeclListContext.class,0);
		}
		public VarDeclListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclList; }
	}

	public final VarDeclListContext varDeclList() throws RecognitionException {
		VarDeclListContext _localctx = new VarDeclListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varDeclList);
		try {
			setState(119);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				((VarDeclListContext)_localctx).v1 = varDecl();
				setState(111);
				match(COMMA);
				setState(112);
				((VarDeclListContext)_localctx).vl = varDeclList();

				        ((VarDeclListContext)_localctx).l =  ((VarDeclListContext)_localctx).vl.l;
				        _localctx.l.add(((VarDeclListContext)_localctx).v1.v);
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				((VarDeclListContext)_localctx).v2 = varDecl();

				        ((VarDeclListContext)_localctx).l =  new ArrayList<VariableDeclaration>();
				        _localctx.l.add(((VarDeclListContext)_localctx).v2.v);
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				 /* nothing */
				        ((VarDeclListContext)_localctx).l =  new ArrayList<VariableDeclaration>();
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public VariableDeclaration v;
		public TypeContext t;
		public Token i;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(MiniParser.ID, 0); }
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_varDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			((VarDeclContext)_localctx).t = type(0);
			setState(122);
			((VarDeclContext)_localctx).i = match(ID);

			        ((VarDeclContext)_localctx).v =  new VariableDeclaration(((VarDeclContext)_localctx).t.t, (((VarDeclContext)_localctx).i!=null?((VarDeclContext)_localctx).i.getText():null));
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarInitStmtContext extends ParserRuleContext {
		public VariableInitializationStatement v;
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public VarInitStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varInitStmt; }
	}

	public final VarInitStmtContext varInitStmt() throws RecognitionException {
		VarInitStmtContext _localctx = new VarInitStmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_varInitStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			varDecl();
			setState(126);
			match(EQ);
			setState(127);
			expr(0);
			setState(128);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type t;
		public PrimitiveTypeContext p;
		public PrimitiveTypeContext primitiveType() {
			return getRuleContext(PrimitiveTypeContext.class,0);
		}
		public GenericTypeContext genericType() {
			return getRuleContext(GenericTypeContext.class,0);
		}
		public FrameTypeContext frameType() {
			return getRuleContext(FrameTypeContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}

	private TypeContext type(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeContext _localctx = new TypeContext(_ctx, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 18;
		enterRecursionRule(_localctx, 18, RULE_type, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			switch (_input.LA(1)) {
			case INTEGER:
			case DECIMAL:
			case CHARACTER:
			case STRING:
			case ANY:
				{
				setState(131);
				((TypeContext)_localctx).p = primitiveType();

				        ((TypeContext)_localctx).t =  ((TypeContext)_localctx).p.t;
				    
				}
				break;
			case LANGLE:
			case ARRAYLIST:
			case LINKEDLIST:
			case POINTER:
				{
				setState(134);
				genericType();
				}
				break;
			case FRAME:
				{
				setState(135);
				frameType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(143);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TypeContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_type);
					setState(138);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(139);
					match(LBRACK);
					setState(140);
					match(RBRACK);
					}
					} 
				}
				setState(145);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class GenericTypeContext extends ParserRuleContext {
		public PrimitiveGenericTypeContext primitiveGenericType() {
			return getRuleContext(PrimitiveGenericTypeContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public GenericTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genericType; }
	}

	public final GenericTypeContext genericType() throws RecognitionException {
		GenericTypeContext _localctx = new GenericTypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_genericType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			primitiveGenericType();
			setState(147);
			match(LANGLE);
			setState(148);
			type(0);
			setState(149);
			match(RANGLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FrameTypeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MiniParser.ID, 0); }
		public FrameTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_frameType; }
	}

	public final FrameTypeContext frameType() throws RecognitionException {
		FrameTypeContext _localctx = new FrameTypeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_frameType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(FRAME);
			setState(152);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FrameDeclContext extends ParserRuleContext {
		public FrameTypeContext frameType() {
			return getRuleContext(FrameTypeContext.class,0);
		}
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public FrameDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_frameDecl; }
	}

	public final FrameDeclContext frameDecl() throws RecognitionException {
		FrameDeclContext _localctx = new FrameDeclContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_frameDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			frameType();
			setState(155);
			match(LCURLY);
			setState(159); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(156);
				varDecl();
				setState(157);
				match(SEMI);
				}
				}
				setState(161); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LANGLE) | (1L << INTEGER) | (1L << DECIMAL) | (1L << CHARACTER) | (1L << ARRAYLIST) | (1L << LINKEDLIST) | (1L << POINTER) | (1L << STRING) | (1L << ANY) | (1L << FRAME))) != 0) );
			setState(163);
			match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitiveTypeContext extends ParserRuleContext {
		public Type t;
		public Token s;
		public TerminalNode INTEGER() { return getToken(MiniParser.INTEGER, 0); }
		public TerminalNode DECIMAL() { return getToken(MiniParser.DECIMAL, 0); }
		public TerminalNode CHARACTER() { return getToken(MiniParser.CHARACTER, 0); }
		public TerminalNode STRING() { return getToken(MiniParser.STRING, 0); }
		public TerminalNode ANY() { return getToken(MiniParser.ANY, 0); }
		public PrimitiveTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitiveType; }
	}

	public final PrimitiveTypeContext primitiveType() throws RecognitionException {
		PrimitiveTypeContext _localctx = new PrimitiveTypeContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_primitiveType);
		try {
			setState(171);
			switch (_input.LA(1)) {
			case INTEGER:
				enterOuterAlt(_localctx, 1);
				{
				setState(165);
				((PrimitiveTypeContext)_localctx).s = match(INTEGER);
